<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.srimal.android.material.MainActivity"
    tools:showIn="@layout/activity_main">


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true">
        <TableRow
            android:weightSum="2">
            <EditText
                android:id="@+id/et_density_min"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:inputType="numberDecimal"
                android:hint="@string/hint_density_min"/>
            <EditText
                android:id="@+id/et_density_max"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:inputType="numberDecimal"
                android:hint="@string/hint_density_max"/>
        </TableRow>
        <TableRow
            android:weightSum="2">
            <EditText
                android:id="@+id/et_melting_point_min"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:inputType="numberDecimal"
                android:hint="@string/hint_melting_point_min"/>
            <EditText
                android:id="@+id/et_melting_point_max"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:inputType="numberDecimal"
                android:hint="@string/hint_melting_point_max"/>
        </TableRow>
    </TableLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_text_search"
        android:id="@+id/btn_search"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp" />
</RelativeLayout>
